# tgbot-cpp

./: .dockerignore  .editorconfig  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  CNAME  Dockerfile  Dockerfile_test  Doxyfile  HOWTORELEASE.md  LICENSE  README.md  _animation_8h.html  _animation_8h_source.html  _api_8h.html  _api_8h_source.html  _audio_8h.html  _audio_8h_source.html  _birthdate_8h.html  _birthdate_8h_source.html  _boost_http_only_ssl_client_8h.html  _boost_http_only_ssl_client_8h_source.html  _bot_8h.html  _bot_8h_source.html  _bot_command_8h.html  _bot_command_8h_source.html  _bot_command_scope_8h.html  _bot_command_scope_8h_source.html  _bot_command_scope_all_chat_administrators_8h.html  _bot_command_scope_all_chat_administrators_8h_source.html  _bot_command_scope_all_group_chats_8h.html  _bot_command_scope_all_group_chats_8h_source.html  _bot_command_scope_all_private_chats_8h.html  _bot_command_scope_all_private_chats_8h_source.html  _bot_command_scope_chat_8h.html  _bot_command_scope_chat_8h_source.html  _bot_command_scope_chat_administrators_8h.html  _bot_command_scope_chat_administrators_8h_source.html  _bot_command_scope_chat_member_8h.html  (+1181 more)
.github/workflows/: codeql-analysis.yml  docker-image.yml  linux.yml  mac.yml  sw.yml
.travis/: install.sh
CMake/: FindJsonCppCustom.cmake
docs/: _animation_8h.html  _animation_8h_source.html  _api_8h.html  _api_8h_source.html  _audio_8h.html  _audio_8h_source.html  _bot_8h.html  _bot_8h_source.html  _callback_game_8h.html  _callback_game_8h_source.html  _callback_query_8h.html  _callback_query_8h_source.html  _chat_8h.html  _chat_8h_source.html  _chat_member_8h.html  _chat_member_8h_source.html  _chat_photo_8h.html  _chat_photo_8h_source.html  _chosen_inline_result_8h.html  _chosen_inline_result_8h_source.html  _contact_8h.html  _contact_8h_source.html  _document_8h.html  _document_8h_source.html  _event_broadcaster_8h.html  _event_broadcaster_8h_source.html  _event_handler_8h.html  _event_handler_8h_source.html  _file_8h.html  _file_8h_source.html  _file_tools_8h.html  _file_tools_8h.js  _file_tools_8h_source.html  _force_reply_8h.html  _force_reply_8h_source.html  _game_8h.html  _game_8h_source.html  _game_high_score_8h.html  _game_high_score_8h_source.html  _generic_reply_8h.html  (+511 more)
docs/d0/d1d/: class_tg_bot_1_1_inline_query_result_cached_mpeg4_gif.html  class_tg_bot_1_1_inline_query_result_cached_mpeg4_gif.js
docs/d0/d72/: _tg_exception_8h.html  (+1 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+86 more)
include/maxbot/: Api.h  Bot.h  BotException.h  BotTypeParser.h  BotTypeParserBase.h  BotTypeParserUpdates.h  EventBroadcaster.h  EventHandler.h  export.h  maxbot.h
include/tgbot/: Api.h  ApiImpl.h  Bot.h  EventBroadcaster.h  EventHandler.h  Optional.h  TgException.h  TgTypeParser.h  doxygenMain.h  export.h  tgbot.h
samples/: CMakeLists.txt  common_defs.cmake
samples/echobot/: CMakeLists.txt  Dockerfile
samples/echobot-conan/: conanfile.py
samples/echobot-curl-client/: CMakeLists.txt  Dockerfile
samples/echobot-curl-proxy-carousel/: CMakeLists.txt  Dockerfile
samples/echobot-setmycommands/: CMakeLists.txt  Dockerfile
samples/echobot-submodule/: CMakeLists.txt  Dockerfile
samples/echobot-submodule/src/: main.cpp
samples/echobot-webhook-server/: CMakeLists.txt  Dockerfile
samples/echobot-webhook-server/src/: main.cpp
samples/echobot/src/: main.cpp
samples/file/: CMakeLists.txt  Dockerfile
samples/inline-keyboard/: CMakeLists.txt  Dockerfile
samples/inline-keyboard/src/: main.cpp
samples/photo/: CMakeLists.txt  Dockerfile
samples/photo/src/: main.cpp
samples/receive-file/: CMakeLists.txt  Dockerfile
samples/receive-file/src/: main.cpp
samples/received-text-processing/: CMakeLists.txt  Dockerfile
samples/reply-keyboard/: CMakeLists.txt  Dockerfile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+106 more)
src/: Api.cpp  Bot.cpp  BotException.cpp  BotTypeParser.cpp  BotTypeParserBase.cpp  BotTypeParserUpdates.cpp  EventHandler.cpp  TgException.cpp  TgTypeParser.cpp
src/net/: BoostHttpOnlySslClient.cpp  BotLongPoll.cpp  CurlHttpClient.cpp  HttpClient.cpp  HttpParser.cpp  TgLongPoll.cpp  Url.cpp
src/tgbot/: Api.cpp  Api.h  Bot.cpp  Bot.h  EventBroadcaster.h  EventHandler.h  EventManager.cpp  EventManager.h  Http.cpp  Http.h  Parser.cpp  Parser.h  TgException.cpp  TgException.h  TgTypeParser.cpp  TgTypeParser.h  Url.cpp  Url.h
src/tools/: Api.cpp  FileTools.cpp  StringTools.cpp  TgException.cpp  TgTypeParser.cpp
src/types/: BotCommandScope.cpp  ChatBoostSource.cpp  ChatMember.cpp  InlineQueryResult.cpp  InputFile.cpp  InputMedia.cpp  InputMessageContent.cpp  MenuButton.cpp  MessageOrigin.cpp  PassportElementError.cpp  ReactionType.cpp
test/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
test/maxbot/: Api.cpp
test/maxbot/net/: HttpParser.cpp  Url.cpp
test/maxbot/tools/: StringTools.cpp
test/tgbot/: Api.cpp  TgTypeParser.cpp
test/tgbot/net/: HttpParser.cpp  Url.cpp
test/tgbot/tools/: StringTools.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tools/: docker-push  docker-run-sample  docker-run-sample-webhook  docker-test  docs-generate  docs-push-gh-pages  list-includes  list-srcs  push-ghpages
(+852 files in other folders)
